# draftline

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/skills/auditaur-debug/: SKILL.md
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  publish-crate.yml
crates/draftline/: Cargo.toml  README.md
crates/draftline/src/: content_policy.rs  error.rs  lib.rs  merge.rs  path.rs  profile.rs  recovery.rs  remote.rs  tauri_contract.rs  workspace.rs
crates/draftline/tests/: cli_contract.rs  scenario_flows.rs  tauri_contract.rs
docs/: api-plan.md  coverage.md  implementation-plan.md  product-language.md  scenarios.md  tauri-dogfood-plan.md
docs/scenario-flows/: authoring.md  collaboration.md  content-policy.md  recovery-cleanup.md  workspace.md
scripts/: package-consumer-smoke.mjs
site/: astro.config.mjs  package.json
site/public/: CNAME  diagram-lightbox.css  diagram-lightbox.js
site/src/components/: Mermaid.astro
site/src/content/docs/docs/: index.md  scenarios.md
site/src/content/docs/docs/scenarios/: authoring.md  collaboration.md  content-policy.md  recovery-cleanup.md  workspace.md
site/src/data/: scenarios.ts
site/src/layouts/: BaseLayout.astro
site/src/pages/: index.astro
site/src/styles/: global.css  starlight.css
workbench/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
workbench/src/: App.tsx  main.tsx  styles.css
workbench/src-tauri/: Cargo.toml  tauri.conf.json
workbench/src-tauri/capabilities/: default.json
workbench/src-tauri/src/: main.rs
